# Green-Scheduling-Distributed-Flowshop-Problem

./: .gitignore  CMakeLists.txt  Makefile  Projects - Atalho.lnk  README.md  create_folders.py  ex.csv  max_s_min_tft.csv  nsga_instance_generator.py  pop_output.csv  solutions_plot.ipynb  test_instance1.txt  test_instance2.txt
analysis/: 2-4-100__4_results.csv  2-4-20__0_results.csv  2-4-40__1_results.csv  2-4-60__2_results.csv  2-4-80__3_results.csv  after_nsga2_1.csv  ex_factory.csv  factory_test.csv  factory_test_speed_down.csv  factory_test_speed_up.csv  gantt_chart.ipynb  helpers.py  initial_pop_1.csv  max_s_min_tft.csv  min_s_min_tec.csv  nsga_plots.ipynb  nsga_tests.ipynb  pop_output.csv  rand_s_min_tec.csv  rand_s_min_tft.csv  requirements.txt  results-5iter-n-10.csv  results-5iter-n-2.csv  results.csv  results_1.csv  results_op.csv  solutions_plot.ipynb  test_instance_pop.csv  test_results.csv
analysis/test_6_nsga2_only_swap/: after_11.csv  after_12.csv  after_13.csv  after_14.csv  after_15.csv  after_18.csv  after_19.csv  after_25.csv  after_27.csv  after_28.csv  after_3.csv  after_37.csv  after_48.csv  after_49.csv  after_5.csv  after_50.csv  after_7.csv  after_8.csv  after_9.csv
include/: Factory.hpp  Instance.hpp  Job.hpp  Machine.hpp  Matrices.hpp  Problem.hpp  Solution.hpp  Util.h  defines.hpp  read.hpp
include/random/: SplitMix64.h  Xoshiro256plus.h  random_convert.h
instances/: test_instance1.txt
instances/294/: 2-16-100__134.txt  (+599 more)
source/: Factory.cpp  Instance.cpp  Job.cpp  Problem.cpp  Solution.cpp  Util.cpp  main.cpp  read.cpp
(+2294 files in other folders)
